Estruturação do projeto

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Barbearia Alura</title>
 	<meta charset="UTF-8">
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -11,7 +11,7 @@
 		<h1 class="titulo-principal">Barbearia Alura</h1>
 	</header>
 
-	<img id="banner" src="banner.jpg">
+	<img id="banner" src="img/banner.jpg">
 
 	<div class="principal">
 		<h1 class="titulo-centralizado">Sobre a Barbearia Alura</h1>
@@ -33,7 +33,7 @@
 			<li class="itens">Profissionais qualificados</li>
 		</ul>
 
-		<img src="beneficios.jpg" class="imagem_beneficios">
+		<img src="img/beneficios.jpg" class="imagem_beneficios">
 	</div>
 </body>
 </html>
