--- a/pagina/produtos.html
+++ b/pagina/produtos.html
@@ -15,7 +15,7 @@
 				<ul>
 					<li><a href="../index.html">Home</a></li>
 					<li><a href="produtos.html">Produtos</a></li>
-					<li><a href="../contato/contato.html">Contato</a></li>
+					<li><a href="../pagina/contato.html">Contato</a></li>
 				</ul>
 			</nav>	
 		</div>			
