--- a/pagina/contato.html
+++ b/pagina/contato.html
@@ -9,24 +9,73 @@
 <body>
 	<header>
 		<div class="caixa">
-			<h1><img src="../img/produtos/logo.png"></h1>
+			<h1>
+				<img src="../img/produtos/logo.png" alt="Logo da Barbearia Alura">
+			</h1>
 
 			<nav>
 				<ul>
 					<li><a href="../index.html">Home</a></li>
 					<li><a href="produtos.html">Produtos</a></li>
-					<li><a href="../contato/contato.html">Contato</a></li>
+					<li><a href="contato.html">Contato</a></li>
 				</ul>
 			</nav>	
 		</div>			
 	</header>
 
 	<main>
-		cccc
+		<form>
+			<label for="nome">Nome: </label>
+			<input type="text" id="nome" class="input-padrao" required>
+
+			<label for="email">Email: </label>
+			<input type="email" id="email" class="input-padrao" required placeholder="seuemail@dominio.com">
+
+			<label for="telefone">Telefone: </label>
+			<input type="tel" id="telefone" class="input-padrao" required placeholder="(XX) XXXXX-XXXX">
+
+			<label for="mensagem">Mensagem</label>
+			<textarea id="mensagem" cols="60" rows="10" class="input-padrao" required></textarea>
+
+			<fieldset>
+				<legend>Como prefere o nosso contato?</legend>
+				<label for="radio-email">
+					<input id="radio-email" type="radio" value="email" name="contato">
+					Email
+				</label>
+
+				<label for="radio-telefone">
+					<input id="radio-telefone" type="radio" value="telefone" name="contato">
+					Telefone
+				</label>
+				
+
+				<label for="radio-whatsapp">
+					<input id="radio-whatsapp" type="radio" value="whatsapp" name="contato" checked>
+					Whatsapp
+				</label>				
+			</fieldset>
+
+			<fieldset>
+				<legend>Qual horário prefere ser atendido?</legend>
+				<select>
+					<option>Manhã</option>
+					<option>Tarde</option>
+					<option>Noite</option>
+				</select>
+			</fieldset>
+
+			<label class="checkbox">
+				<input type="checkbox" checked>
+				Gostaria de receber noassas novidades por email?
+			</label>
+
+			<input type="submit" value="Enviar Formulário">
+		</form>
 	</main>
 
 	<footer>
-		<img src="../img/produtos/logo-branco.png">
+		<img src="../img/produtos/logo-branco.png" alt="Logo da Barbearia Alura">
 		<p class="copyright">&copy; Copyright Barbearia Alura - 2022</p>
 	</footer>
 </body>
