Aplicação de efeitos visuais botao submit da pagina contato.html

--- a/pagina/contato.html
+++ b/pagina/contato.html
@@ -70,7 +70,7 @@
 				Gostaria de receber noassas novidades por email?
 			</label>
 
-			<input type="submit" value="Enviar Formulário">
+			<input type="submit" value="Enviar Formulário" class="enviar">
 		</form>
 	</main>
 
