--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 	<meta charset="UTF-8">
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/style.css">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -26,7 +29,9 @@
 
 	<main>
 		<section class="principal">
-			<h1 class="titulo-principal">Sobre a Barbearia Alura</h1>
+			<h2 class="titulo-principal">Sobre a Barbearia Alura</h2>
+
+			<img src="img/produtos/utensilios.jpg" class="utensilios" alt="Utensilios de um barbeiro">
 
 			<p>Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
 
@@ -35,17 +40,30 @@
 			<p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
 		</section>
 
+		<section class="mapa">
+			<h3 class="titulo-principal">Nosso estabelecimento</h3>
+			<p>Nosso estabelecimento está localizado no coração da cidade.</p>
+		</section>
+
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d117027.61036122932!2d-46.66220391204301!3d-23.564391062588406!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce5a2b2ed7f3a1%3A0xab35da2f5ca62674!2sCaelum%20-%20Escola%20de%20Tecnologia!5e0!3m2!1spt-BR!2sbr!4v1646158578323!5m2!1spt-BR!2sbr" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+
 		<section class="beneficios">
 			<h3 class="titulo-principal">Beneficíos</h3>
 
-			<ul>
-				<li class="itens">Atendimento aos clientes</li>
-				<li class="itens">Espaço diferenciado</li>
-				<li class="itens">Localização</li>
-				<li class="itens">Profissionais qualificados</li>
-			</ul>
+			<div class="conteudo-beneficios">
+				<ul class="lista-beneficios">
+					<li class="itens">Atendimento aos clientes</li>
+					<li class="itens">Espaço diferenciado</li>
+					<li class="itens">Localização</li>
+					<li class="itens">Profissionais qualificados</li>
+					<li class="itens">Pontualidade</li>
+					<li class="itens">Limpeza</li>
+				</ul><img src="img/beneficios.jpg" class="imagem-beneficios">
+			</div>			
 
-			<img src="img/beneficios.jpg" class="imagem_beneficios">
+			<div class="video">
+				<iframe width="560" height="315" src="https://www.youtube.com/embed/wcVVXUV0YUY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			</div>
 		</section>
 	</main>
 
